--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,6 +18,14 @@ jobs:
       with:
         go-version: 1.15
 
+    - name: Cache go module
+      uses: actions/cache@v2
+      with:
+        path: ~/go/pkg/mod
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        restore-keys: |
+          ${{ runner.os }}-go-
+
     - name: Build
       run: go build -v ./...
 
