--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,3 +31,8 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
