--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,8 +31,11 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+      
     - name: Release
       uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
       env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        files: clash-resurrect
